--- a/test-output/old/Hub Spot Test Suite/methods.html
+++ b/test-output/old/Hub Spot Test Suite/methods.html
@@ -1,6 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Hub Spot Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="df6bb7">  <td>19/08/11 22:43:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@5f2afe62]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-1@1636334624</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:58:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:58:44</td>   <td>14900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-test=hub spot regression Test-1@170651204</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:58:45</td>   <td>15439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:58:45</td>   <td>16191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:58:58</td>   <td>28785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignupLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">verifySignupLinkTest</td> 
+  <td>TestNG-test=hub spot regression Test-2@2037985054</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:58:59</td>   <td>29289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:58:59</td>   <td>30045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:59:12</td>   <td>42574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.hubspotLoginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">hubspotLoginTest</td> 
+  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
+<tr bgcolor="d0a08b">  <td>19/08/12 19:59:13</td>   <td>44081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
 </table>
