--- a/test-output/old/Hub Spot Test Suite/methods-alphabetical.html
+++ b/test-output/old/Hub Spot Test Suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Hub Spot Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:59:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.hubspotLoginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">hubspotLoginTest</td> 
-  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:58:29</td>   <td>-42574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:58:45</td>   <td>-26383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:58:59</td>   <td>-12529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:58:45</td>   <td>-27135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:58:59</td>   <td>-13285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:59:13</td>   <td>1507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@698811383</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:58:44</td>   <td>-27674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">verifyLoginPageTitleTest</td> 
-  <td>TestNG-test=hub spot regression Test-1@170651204</td>   <td></td> </tr>
-<tr bgcolor="d0a08b">  <td>19/08/12 19:58:58</td>   <td>-13789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignupLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@3935e9a8]">verifySignupLinkTest</td> 
-  <td>TestNG-test=hub spot regression Test-2@2037985054</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:36:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.hubspotLoginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">hubspotLoginTest</td> 
+  <td>TestNG-test=hub spot regression Test-3@749805445</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:35:10</td>   <td>-50049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@749805445</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:35:29</td>   <td>-30679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@749805445</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:35:47</td>   <td>-12785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@749805445</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:35:28</td>   <td>-31498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@749805445</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:35:46</td>   <td>-13612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@749805445</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:36:03</td>   <td>3415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=hub spot regression Test-3@749805445</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:35:26</td>   <td>-34197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-test=hub spot regression Test-1@947341991</td>   <td></td> </tr>
+<tr bgcolor="afd46d">  <td>19/08/26 12:35:42</td>   <td>-17891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignupLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@73386d72]">verifySignupLinkTest</td> 
+  <td>TestNG-test=hub spot regression Test-2@853185496</td>   <td></td> </tr>
 </table>
